fix: update parent grid spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @use '@carbon/react' as styles;
 @use '@carbon/react/scss/components/button';
 @use '@carbon/react/scss/components/tag';
+@use '@carbon/react/scss/breakpoint' as *;
+
 
 /// Remove overrides once Carbon bugs are fixed upstream.
 /// Need grid option to not add page gutters at large viewports, to also use when nesting grids
@@ -22,4 +24,12 @@
 
 :root {
   @include styles.theme(styles.$white, button.$white, tag.$white);
+}
+
+.bx--content .bx--css-grid {
+  max-width: 100%;
+  @include breakpoint(md) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
